# computer-vision

./: README.md
Practica1/: CMakeLists.txt  barrel.cpp  contraste.cpp  distortion.cpp  hist.cpp  reduce_colors.cpp  video_alien.cpp
Practica2/: CMakeLists.txt  aprender.cpp  aprender.hpp  math_functions.hpp  objetos.yml  reconocer.cpp  reconocer.hpp
